########################
Nagios Core 4 Change Log
########################

4.4.12 - 2023-05-15
-------------------
FIXES
* Clean up most compiler warnings on GCC and clang (#901)
* Fix incorrect HTML entity escaping in CGIs (#907)

4.4.11 - 2023-04-14
-------------------
FIXES
* Fix incorrect error message in preflight check (#865)
* Fix use-after-free in qh_deregister_handler (#866)
* Fix memory leak in qh_deregister_handler (#866)
* Fix mismatched host/service behavior when changing from SOFT to HARD state (#891)
* Minor performance improvements in CGI utility functions (#866)

4.4.10 - 2023-01-17
-------------------
FIXES
* Fix memory leak in nagiostats.c when using -c, -s, -d, or -D multiple times (#888)
* Improve service scheduling at startup (#887)
* Improve compilation/reduce warnings when using Clang 16 (#889)
* Improve compilation on other, stricter C99 compilers (#890)

4.4.9 - 2022-11-16
------------------
FIXES
* Fixed check_attempts remaining high during a HARD service recovery (#837)
* Fixed memory leak in NERD (#872)

4.4.8 - 2022-10-04
------------------
FIXES
* Minor interface updates
* Fixed crash when checking for updates using SSL

4.4.7 - 2022-04-14
------------------
FIXES
* Fixed checkboxes in jsonquery.html (#778) (Rfferrao87)
* Added SSL support for version update check (Sebastian Wolf)
* Note: NEB modules using the priority/scheduling queues in libnagios may need to update headers due to symbol conflicts with OpenSSL.
* Fixed XSS in homepage when displaying update check results (Sebastian Wolf)
* Fixed allocation error in getcgi.c (#820) (Ariadne Conill)
* Fixed Error: NULL variable for lines of spaces in resource.cfg (#814) (Ralf Herrmann)
* Fixed crash when handling large check output (#825, #828) (Kilvador)
* Update packaging instructions for RPM/EPEL (#850) (T.J. Yang)
* Include packaging instructions for DEB (#842) (Catfriend1)
* Fixed CGI object processing when names end in \ (#819) (Sebastian Wolf)